A way to test out security event other than the verification (#61)
* Code to generate sse events and broadcast to all interested(subject) streams
* Added endpoint to trigger sse events
* Unit tests written and tested by checking if the triggered event is queued
* All REQUIRED fields of the SET are populated
* Mentioned use of pycodestyle in contributing
* Both RISC and CAEP supported and mentioned in doc
