# examples/transmitter/swagger_server/business_logic/__init__.py
@@ -4,26 +4,24 @@
 # that can be found in the LICENSE file.
 
 import logging
-import time
 import uuid
-from typing import List, Optional, Tuple, Union, Dict, Any
-
-import requests
+from typing import List, Optional, Tuple, Union, Dict
 
 from swagger_server.events import (
     Events, SecurityEvent, VerificationEvent
 )
 from swagger_server.business_logic.const import TRANSMITTER_ISSUER
 from swagger_server.business_logic.stream import Stream
-from swagger_server.errors import EmailSubjectNotFound, LongPollingNotSupported
-from swagger_server.models import StreamConfiguration
-from swagger_server.models import StreamStatus
-from swagger_server.models import Subject
-from swagger_server.models import Status
-from swagger_server.models import Email
-
-from swagger_server.models import TransmitterConfiguration  # noqa: E501
-
+from swagger_server.business_logic.generate_event import (
+    generate_security_event
+)
+from swagger_server.errors import (
+    EmailSubjectNotFound, LongPollingNotSupported, TransmitterError
+)
+from swagger_server.models import (
+   Email, Status, StreamConfiguration, StreamStatus,
+   Subject, TransmitterConfiguration, EventType
+)
 from swagger_server.utils import get_simple_subject
 
 log = logging.getLogger(__name__)
@@ -117,8 +115,10 @@ def verification_request(state: Optional[str], client_id: str) -> None:
     )
     stream.process_SET(security_event)
 
-def _well_known_sse_configuration_get(url_root: str, 
-                                      issuer: Optional[str] = None) -> TransmitterConfiguration:
+
+def _well_known_sse_configuration_get(
+        url_root: str,
+        issuer: Optional[str] = None) -> TransmitterConfiguration:
     return TransmitterConfiguration(
         issuer=TRANSMITTER_ISSUER + (issuer if issuer else ''),
         jwks_uri=url_root + 'jwks.json',
@@ -161,4 +161,14 @@ def poll_request(max_events: Optional[int],
 def register(audience: Union[str, List[str]]) -> Dict[str, str]:
     client_id = uuid.uuid4().hex
     Stream(client_id, audience)
-    return { 'token': client_id }
+    return {'token': client_id}
+
+
+def trigger_event(event_type: EventType, subject: Subject) -> None:
+    security_event = generate_security_event(event_type, subject)
+    if security_event is None:
+        msg = f"invalid event_type:{event_type} (only CAEP and RISC supported)"
+        raise TransmitterError(code=500, message=msg)
+
+    # and broadcast it
+    Stream.broadcast_SET(security_event)
